examples/test/testpolicy1925.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1925
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key39: value49
      key12: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value21
          key4: value31
          key23: value0
      podSelector:
        matchLabels:
          key39: value11
          key0: value0
